2010-03-10 - 1.0.5 * Added cdiff example as an executable.
                   * Disabled building of gemspec file.
                   * Made an decolor executable, that removes colors from an io
                     stream.
                   * Match an additional way to clear the color in the
                     COLORED_REGEXP for the uncolored method.
2009-07-23 - 1.0.4 * Some cleanup.
                   * Build a gemspec file.
2007-10-05 - 1.0.3 * Better documentation + some code clean up.
                   * Deleted autorequire from Rakefile.
2005-11-12 - 1.0.2 * Added DESTDIR in front of install path to make repackaging
                     easier. Thanks to Tilman Sauerbeck <tilman@code-monkey.de>
                     for giving the hint.
2005-09-05 - 1.0.1 * Fixed install bug in Rakefile, reported by
                     Martin DeMello <martindemello@gmail.com>
2004-12-23 - 1.0.0 * Added Term::ANSIColor.coloring[?=]? methods.
                     Thanks, Thomas Husterer for the contribution.
                   * Minor cleanup of code.
                   * Documented visible methods in the module.
2004-09-28 - 0.0.4 * First release on Rubyforge
                   * Supports Rubygems now
2003-10-09 - 0.0.3 * Added uncolored method as suggested by
                     Thomas Husterer <Thomas.Husterer@heidelberg.com>
                   * Added attribute methods with string arguments
                   * Deleted now unused files
2002-07-27 - 0.0.2 * Minor Code Cleanup
                   * Added cdiff.rb
2002-06-12 - 0.0.1 * Initial Release