@@ -17,7 +17,7 @@ Or if you prefer using Rake, try:
 Or if you want to use rubygems just type this and rubygems fetches the gem and
 installs it for you:
 
-# gem install term-ansicolor
+# gem install ansiterm-ansicolor
 
 === Download
 
@@ -27,7 +27,7 @@ The latest version of this library can be downloaded at
 
 The homepage of this library is located at
 
-* http://flori.github.com/term-ansicolor
+* http://flori.github.com/ansiterm-ansicolor
 
 === Examples
 
@@ -35,13 +35,13 @@ Additional to the two executables cdiff and decolor, the file
 examples/example.rb in the source/gem-distribution shows how this library can
 be used:
 
-    require 'term/ansicolor'
+    require 'ansiterm/ansicolor'
 
     # Use this trick to work around namespace cluttering that
-    # happens if you just include Term::ANSIColor:
+    # happens if you just include AnsiTerm::ANSIColor:
 
     class Color
-      extend Term::ANSIColor
+      extend AnsiTerm::ANSIColor
     end
 
     print Color.red, Color.bold, "No Namespace cluttering:", Color.clear, "\n"
@@ -49,17 +49,17 @@ be used:
     print Color.on_red(Color.green("green")), "\n"
     print Color.yellow { Color.on_black { "yellow on_black" } }, "\n\n"
 
-    # Or shortcut Term::ANSIColor by assignment:
-    c = Term::ANSIColor
+    # Or shortcut AnsiTerm::ANSIColor by assignment:
+    c = AnsiTerm::ANSIColor
 
     print c.red, c.bold, "No Namespace cluttering (alternative):", c.clear, "\n"
     print c.green + "green" + c.clear, "\n"
     print c.on_red(c.green("green")), "\n"
     print c.yellow { c.on_black { "yellow on_black" } }, "\n\n"
 
-    # Anyway, I don't define any of Term::ANSIColor's methods in this example
+    # Anyway, I don't define any of AnsiTerm::ANSIColor's methods in this example
     # and I want to keep it short:
-    include Term::ANSIColor
+    include AnsiTerm::ANSIColor
 
     print red, bold, "Usage as constants:", reset, "\n"
     print clear, "clear", reset, reset, "reset", reset,
@@ -98,7 +98,7 @@ be used:
 
     # Usage as Mixin into String or its Subclasses
     class String
-      include Term::ANSIColor
+      include AnsiTerm::ANSIColor
     end
 
     print "Usage as String Mixins:".red.bold, "\n"
@@ -111,7 +111,7 @@ be used:
       "on_yellow".on_yellow, "on_blue".on_blue, "on_magenta".on_magenta,
       "on_cyan".on_cyan, "on_white".on_white, "|\n\n"
 
-    symbols = Term::ANSIColor::attributes
+    symbols = AnsiTerm::ANSIColor::attributes
     print red { bold { "All supported attributes = " } },
       blue { symbols.inspect }, "\n\n"
 
