@@ -3,9 +3,9 @@
 ## Little unix filter that colorizes diff output.
 #
 
-require 'term/ansicolor'
+require 'ansiterm/ansicolor'
 
-include Term::ANSIColor
+include AnsiTerm::ANSIColor
 
 ARGF.each do |line|
   STDOUT.print(
