@@ -1,4 +1,4 @@
-== Term::ANSIColor - ANSI escape sequences in Ruby
+== AnsiTerm::ANSIColor - ANSI escape sequences in Ruby
 
 === Description
 
@@ -28,14 +28,14 @@ The homepage of this library is located at
 
 The file examples/example.rb in the source/gem-distribution shows how
 this library can be used:
- require 'term/ansicolor'
+ require 'ansiterm/ansicolor'
  
  # Use this trick to work around namespace cluttering that
- # happens if you just include Term::ANSIColor:
+ # happens if you just include AnsiTerm::ANSIColor:
  
  class Color
    class << self
-     include Term::ANSIColor
+     include AnsiTerm::ANSIColor
    end
  end
  
@@ -44,17 +44,17 @@ this library can be used:
  print Color.on_red(Color.green("green")), "\n"
  print Color.yellow { Color.on_black { "yellow on_black" } }, "\n\n"
  
- # Or shortcut Term::ANSIColor by assignment:
- c = Term::ANSIColor
+ # Or shortcut AnsiTerm::ANSIColor by assignment:
+ c = AnsiTerm::ANSIColor
  
  print c.red, c.bold, "No Namespace cluttering (alternative):", c.clear, "\n"
  print c.green + "green" + c.clear, "\n"
  print c.on_red(c.green("green")), "\n"
  print c.yellow { c.on_black { "yellow on_black" } }, "\n\n"
  
- # Anyway, I don't define any of Term::ANSIColor's methods in this example
+ # Anyway, I don't define any of AnsiTerm::ANSIColor's methods in this example
  # and I want to keep it short:
- include Term::ANSIColor
+ include AnsiTerm::ANSIColor
  
  print red, bold, "Usage as constants:", reset, "\n"
  print clear, "clear", reset, reset, "reset", reset,
@@ -93,7 +93,7 @@ this library can be used:
  
  # Usage as Mixin into String or its Subclasses
  class String
-   include Term::ANSIColor
+   include AnsiTerm::ANSIColor
  end
  
  print "Usage as String Mixins:".red.bold, "\n"
@@ -106,7 +106,7 @@ this library can be used:
    "on_yellow".on_yellow, "on_blue".on_blue, "on_magenta".on_magenta,
    "on_cyan".on_cyan, "on_white".on_white, "|\n\n"
  
- symbols = Term::ANSIColor::attributes
+ symbols = AnsiTerm::ANSIColor::attributes
  print red { bold { "All supported attributes = " } },
    blue { symbols.inspect }, "\n\n"
  
