@@ -7,9 +7,9 @@ include FileUtils::Verbose
 
 destdir = "#{ENV['DESTDIR']}"
 libdir = CONFIG["sitelibdir"]
-dest = destdir + File.join(libdir, 'term')
+dest = destdir + File.join(libdir, 'ansiterm')
 mkdir_p dest
-install 'lib/term/ansicolor.rb', dest
-dest = destdir + File.join(libdir, 'term', 'ansicolor')
+install 'lib/ansiterm/ansicolor.rb', dest
+dest = destdir + File.join(libdir, 'ansiterm', 'ansicolor')
 mkdir_p dest
-install 'lib/term/ansicolor/version.rb', dest
+install 'lib/ansiterm/ansicolor/version.rb', dest
