@@ -1,6 +1,6 @@
-require 'term/ansicolor/version'
+require 'ansiterm/ansicolor/version'
 
-module Term
+module AnsiTerm
   # The ANSIColor module can be used for namespacing and mixed into your own
   # classes.
   module ANSIColor
@@ -47,7 +47,7 @@ module Term
 
     # Turns the coloring on or off globally, so you can easily do
     # this for example:
-    #  Term::ANSIColor::coloring = STDOUT.isatty
+    #  AnsiTerm::ANSIColor::coloring = STDOUT.isatty
     def self.coloring=(val)
       @coloring = val
     end
@@ -57,7 +57,7 @@ module Term
       eval %Q{
           def #{c}(string = nil)
             result = ''
-            result << "\e[#{v}m" if Term::ANSIColor.coloring?
+            result << "\e[#{v}m" if AnsiTerm::ANSIColor.coloring?
             if block_given?
               result << yield
             elsif string
@@ -67,7 +67,7 @@ module Term
             else
               return result #only switch on
             end
-            result << "\e[0m" if Term::ANSIColor.coloring?
+            result << "\e[0m" if AnsiTerm::ANSIColor.coloring?
             result
           end
       }
@@ -93,7 +93,7 @@ module Term
 
     module_function
 
-    # Returns an array of all Term::ANSIColor attributes as symbols.
+    # Returns an array of all AnsiTerm::ANSIColor attributes as symbols.
     def attributes
       ATTRIBUTE_NAMES
     end
