@@ -1,6 +1,6 @@
-module Term
+module AnsiTerm
   module ANSIColor
-    # Term::ANSIColor version
+    # AnsiTerm::ANSIColor version
     VERSION         = '1.0.5'
     VERSION_ARRAY   = VERSION.split(/\./).map { |x| x.to_i } # :nodoc:
     VERSION_MAJOR   = VERSION_ARRAY[0] # :nodoc:
