@@ -1,4 +1,4 @@
 #!/usr/bin/env ruby
 
 puts "Creating documentation."
-system "rdoc --title 'Term::ANSIColor' --main README -d README #{Dir['lib/**/*.rb'] * ' '}"
+system "rdoc --title 'AnsiTerm::ANSIColor' --main README -d README #{Dir['lib/**/*.rb'] * ' '}"
