@@ -1,18 +1,18 @@
 #!/usr/bin/env ruby
 
 require 'test/unit'
-require 'term/ansicolor'
+require 'ansiterm/ansicolor'
 
 class String
-  include Term::ANSIColor
+  include AnsiTerm::ANSIColor
 end
 
 class Color
-  extend Term::ANSIColor
+  extend AnsiTerm::ANSIColor
 end
 
 class ANSIColorTest < Test::Unit::TestCase
-  include Term::ANSIColor
+  include AnsiTerm::ANSIColor
 
   def setup
     @string = "red"
@@ -26,7 +26,7 @@ class ANSIColorTest < Test::Unit::TestCase
     assert_equal string_red, string.red
     assert_equal string_red, Color.red(string)
     assert_equal string_red, Color.red { string }
-    assert_equal string_red, Term::ANSIColor.red { string }
+    assert_equal string_red, AnsiTerm::ANSIColor.red { string }
     assert_equal string_red, red { string }
   end
 
@@ -35,7 +35,7 @@ class ANSIColorTest < Test::Unit::TestCase
     assert_equal string_red_on_green, Color.on_green(Color.red(string))
     assert_equal string_red_on_green, Color.on_green { Color.red { string } }
     assert_equal string_red_on_green,
-      Term::ANSIColor.on_green { Term::ANSIColor.red { string } }
+      AnsiTerm::ANSIColor.on_green { AnsiTerm::ANSIColor.red { string } }
     assert_equal string_red_on_green, on_green { red { string } }
   end
 
@@ -44,21 +44,21 @@ class ANSIColorTest < Test::Unit::TestCase
     assert_equal string, string_red.uncolored
     assert_equal string, Color.uncolored(string_red)
     assert_equal string, Color.uncolored { string_red }
-    assert_equal string, Term::ANSIColor.uncolored { string_red }
+    assert_equal string, AnsiTerm::ANSIColor.uncolored { string_red }
     assert_equal string, uncolored { string }
   end
 
   def test_attributes
     foo = 'foo'
-    for (a, _) in Term::ANSIColor.attributes
+    for (a, _) in AnsiTerm::ANSIColor.attributes
       assert_not_equal foo, foo_colored = foo.__send__(a)
       assert_equal foo, foo_colored.uncolored
       assert_not_equal foo, foo_colored = Color.__send__(a, foo)
       assert_equal foo, Color.uncolored(foo_colored)
       assert_not_equal foo, foo_colored = Color.__send__(a) { foo }
       assert_equal foo, Color.uncolored { foo_colored }
-      assert_not_equal foo, foo_colored = Term::ANSIColor.__send__(a) { foo }
-      assert_equal foo, Term::ANSIColor.uncolored { foo_colored }
+      assert_not_equal foo, foo_colored = AnsiTerm::ANSIColor.__send__(a) { foo }
+      assert_equal foo, AnsiTerm::ANSIColor.uncolored { foo_colored }
       assert_not_equal foo, foo_colored = __send__(a) { foo }
       assert_equal foo, uncolored { foo }
     end
