@@ -1,3 +1,5 @@
+2010-05-30 - 1.0.5.1 * Changed Term:: namespace to AnsiTerm:: to prevent
+                       collison with Term class.
 2010-03-10 - 1.0.5 * Added cdiff example as an executable.
                    * Disabled building of gemspec file.
                    * Made an decolor executable, that removes colors from an io
